Fixed footer alignment.

--- a/project/ajapaik/static/css/ajapaik-style.css
+++ b/project/ajapaik/static/css/ajapaik-style.css
@@ -2015,7 +2015,6 @@ ul.errorlist {
 #ajapaik-photoview-container {
     margin-top: 20px;
     margin-left: 10px;
-    min-height: 2000px;
 }
 
 #ajapaik-photoview-comments-section {
@@ -2606,7 +2605,6 @@ a[href^="https://maps.google.com/maps"] {
 
 .footer {
     position: absolute;
-    bottom: 0;
     width: 100%;
     height: 80px;
     background-color: rgba(0, 0, 0, 0.8);
